--- a/src/scss/_mobile-apps.scss
+++ b/src/scss/_mobile-apps.scss
@@ -57,9 +57,11 @@ article.component-content.mobile-app {
                 }
             }
             &:hover {
-                cursor:pointer;
-                transform:translateX(5px);
-                transition: transform 330ms ease-in-out;
+                @media screen and (min-width:768px) {
+                    cursor:pointer;
+                    transform:translateX(5px);
+                    transition: transform 330ms ease-in-out;
+                }
             }
         }
         &.dropdown-start {
